# llgen

./: .gitignore  CMakeLists.txt  Makefile  README.md  avl3.c  avl3.h  awk.ll  bool.h  empty-paramlist.c  gram2.tab.c  gram2.tab.h  gram2.y  json.ll  lang.c  lang.h  llgen.c  llgen.doc  llgen.h  llgen.skel.c  llgen.skel.cpp  llgen.skel.go  llgen.skel.js  llgen.skel.rs  llgen.skel.ts  paramlist.c  regexp.c  regexp.h  scan2.l  scan2.yy.c  storage.c  storage.h
llgen-language-server/client/: README.md  ll-language-client-0.0.1.vsix  ll.configuration.json  ll.syntaxcoloring.json  llgen.configuration.json  llgen.syntaxcoloring.json  package.json  tsconfig.json
llgen-language-server/client/server/: package-lock.json  package.json
llgen-language-server/client/src/: extension.ts
llgen-language-server/client/test/: extension.test.ts
llgen-language-server/server/: tsconfig.json
llgen-language-server/server/src/: filesystem.ts  lldocument.ts  llgen.ll  llgen.ts  path.ts  server.ts  symbols.ts  util.ts
vscode-extension/: README.md  llgen.json  package.json  vsc-extension-quickstart.md
